--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
         <header>
             <div class="photo_bg_container">
                 <img src="SayNode.jpg">
-                <div class="text_item">
-                    <h1>Welcome to my page!</h1>
-                </div>
+                <h1 class="text_item">Welcome to my page!</h1>
             </div>
         </header>
         <main>
