--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@
     </head>
     <body>
         <header>
-            <div class="photo_bg_container">
-                <img src="SayNode.jpg">
-                <h1 class="text_item">Welcome to my page!</h1>
-            </div>
+            <img class="photo_bg" src="SayNode.jpg">
+            <h1 class="header_item">Welcome to my page!</h1>
         </header>
         <main>
             
