--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <title>My Portfolio Page</title>
     </head>
     <body>
-        <header>
-            <img class="photo_bg" src="SayNode.jpg">
+        <header class="top">
+            <img src="SayNode.jpg" class="bg_photo" style="width: 100%;">
             <h1 class="header_item">Welcome to my page!</h1>
         </header>
         <main>
