--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Paytone+One">
         <link rel="stylesheet" href="styles.css">
         <title>My Portfolio Page</title>
@@ -22,13 +23,20 @@
                 var txt2 = 'Nice to meet you :)';
                 var speed = 50;
 
-                function typeWriterHeader() {
-                    // while (i < txt1.length || j < txt2.length) {
-                        if (i < txt1.length) {
-                            document.getElementById("header1").innerHTML += txt1.charAt(i);
-                            i++;
-                            setTimeout(typeWriterHeader, speed);
-                        }
+                async function typeWriterHeader() {
+                    for (let character of txt1) {
+                        document.getElementById("header1").innerHTML += character;
+                        await new Promise(resolve=>setTimeout(resolve, speed));
+                    }
+                    for (let character of txt2) {
+                        document.getElementById("header2").innerHTML += character;
+                        await new Promise(resolve=>setTimeout(resolve, speed));
+                    }
+                        // if (i < txt1.length) {
+                        //     document.getElementById("header1").innerHTML += txt1.charAt(i);
+                        //     i++;
+                        //     setTimeout(typeWriterHeader, speed);
+                        // }
                         // if (j < txt2.length) {
                         //     document.getElementById("header2").innerHTML += txt2.charAt(i);
                         //     j++;
