--- a/index.html
+++ b/index.html
@@ -6,23 +6,18 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Paytone+One">
         <!-- own stylesheet -->
         <link rel="stylesheet" href="styles.css">
+        <!-- bootstrap -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
         <!-- own script -->
         <script src="script.js"></script>
-        <!-- libraries for navbar -->
-        <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- icon library for hamburger-icon -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <title>My Portfolio Page</title>
     </head>
     <body onload="typeWriterHeader()">
         <header class="header-container">
             <div class="box"><img class="bild" src="SayNode.jpg" /></div>
             <div class="box header-text">
-                <h1 id="header1"></h1>
-                <h1 id="header2"></h1>
+                <p id="header1"></p>
+                <p id="header2"></p>
             </div>
         </header>
         
