changes, clean up
delete unnecessary lines & adding new content + avatar pic

--- a/index.html
+++ b/index.html
@@ -30,14 +30,9 @@
         <main>
             <div class="top-container" id="top">
                 <div class="about">
-                    <h1>Languages</h1>
-                    <ul>
-                        <li>Tamil</li>
-                        <li>German</li>
-                        <li>English</li>
-                        <li>French</li>
-                        <li>Italian</li>
-                    </ul>
+                    <h1>About me</h1>
+                    <img id="avatar" src="me_avatar.jpg" alt="Avatar" />
+                    <p>I was born in 1996, my parents are from Tamil origin, but on paper I'm Swiss. Right now, I'm studying Business Information at the Bern University of applied science in Bern (obviously) and working part time as Product Owner & Project Manager at SayNode Operations AG, a startup company based in Burgdorf, Switzerland.</p>
                     <h1>Skills</h1>
                 </div>
             </div>
