Changes + adding language bar

--- a/index.html
+++ b/index.html
@@ -30,10 +30,59 @@
         <main>
             <div class="top-container" id="top">
                 <div class="about">
-                    <h1>About me</h1>
-                    <img id="avatar" src="me_avatar.jpg" alt="Avatar" />
-                    <p>I was born in 1996, my parents are from Tamil origin, but on paper I'm Swiss. Right now, I'm studying Business Information at the Bern University of applied science in Bern (obviously) and working part time as Product Owner & Project Manager at SayNode Operations AG, a startup company based in Burgdorf, Switzerland.</p>
-                    <h1>Skills</h1>
+                    <div class="about-me">
+                        <h2>About me</h2>
+                        <img id="avatar" src="me_avatar.jpg" alt="Avatar" />
+                        <p>I was born in 1996, my parents are from Tamil origin, but on paper I'm Swiss. Right now, I'm studying Business Information at the Bern University of applied science in Bern (obviously) and working part time as Product Owner & Project Manager at SayNode Operations AG, a startup company based in Burgdorf, Switzerland.</p>
+                    </div>
+                    <div class="languages">
+                        <h2>Language Skills</h2>
+                        <div class="language-skills">
+                            <div class="language-details">
+                                <span>Tamil</span>
+                                <span>100%</span>
+                            </div>
+                            <div class="language-bar">
+                                <div id="tamil-bar"></div>
+                            </div>
+                        </div>
+                        <div class="language-skills">
+                            <div class="language-details">
+                                <span>Deutsch</span>
+                                <span>100%</span>
+                            </div>
+                            <div class="language-bar">
+                                <div id="deu-bar"></div>
+                            </div>
+                        </div>
+                        <div class="language-skills">
+                            <div class="language-details">
+                                <span>English</span>
+                                <span>80%</span>
+                            </div>
+                            <div class="language-bar">
+                                <div id="eng-bar"></div>
+                            </div>
+                        </div>
+                        <div class="language-skills">
+                            <div class="language-details">
+                                <span>Français</span>
+                                <span>50%</span>
+                            </div>
+                            <div class="language-bar">
+                                <div id="fra-bar"></div>
+                            </div>
+                        </div>
+                        <div class="language-skills">
+                            <div class="language-details">
+                                <span>Italiano</span>
+                                <span>20%</span>
+                            </div>
+                            <div class="language-bar">
+                                <div id="ita-bar"></div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="middle-container" id="middle">
