--- a/index.html
+++ b/index.html
@@ -1,103 +1,139 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <!-- font package -->
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Paytone+One">
-        <!-- own stylesheet -->
-        <link rel="stylesheet" href="styles.css">
-        <!-- bootstrap -->
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
-        <!-- own script -->
-        <script src="script.js" defer></script>
-        <title>My Portfolio Page</title>
-    </head>
-    <body onload="typeWriterHeader()">
-        <header class="header-container" id="head">
-            <div class="box"><img class="bild" src="SayNode.jpg" /></div>
-            <div class="box header-text">
-                <p id="header1"></p>
-                <p id="header2"></p>
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <!-- font package -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Paytone+One">
+    <!-- own stylesheet -->
+    <link rel="stylesheet" href="styles.css">
+    <!-- bootstrap -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
+    <!-- own script -->
+    <script src="script.js" defer></script>
+    <title>My Portfolio Page</title>
+</head>
+<body onload="typeWriterHeader()">
+<header class="header-container" id="head">
+    <div class="box"><img class="bild" src="SayNode.jpg"/></div>
+    <div class="box header-text">
+        <p id="header1"></p>
+        <p id="header2"></p>
+    </div>
+</header>
+
+<nav class="navbar-sticky">
+    <p><a href="#head">Home</a></p>
+    <p><a href="#top">About me</a></p>
+    <p><a href="#middle">Contact</a></p>
+</nav>
+
+<main>
+    <div class="top-container" id="top">
+        <div class="about">
+            <div class="about-me">
+                <h2>About me</h2>
+                <img id="avatar" src="me_avatar.jpg" alt="Avatar"/>
+                <p>I was born in 1996, my parents are from Tamil origin, but on paper I'm Swiss. Right now, I'm studying
+                    Business Information at the Bern University of applied science in Bern (obviously) and working part
+                    time as Product Owner & Project Manager at SayNode Operations AG, a startup company based in
+                    Burgdorf, Switzerland.</p>
             </div>
-        </header>
-        
-        <nav class="navbar-sticky">
-            <p><a href="#head">Home</a></p>
-            <p><a href="#top">About me</a></p>
-            <p><a href="#middle">Contact</a></p>
-        </nav>
-        
-        <main>
-            <div class="top-container" id="top">
-                <div class="about">
-                    <div class="about-me">
-                        <h2>About me</h2>
-                        <img id="avatar" src="me_avatar.jpg" alt="Avatar" />
-                        <p>I was born in 1996, my parents are from Tamil origin, but on paper I'm Swiss. Right now, I'm studying Business Information at the Bern University of applied science in Bern (obviously) and working part time as Product Owner & Project Manager at SayNode Operations AG, a startup company based in Burgdorf, Switzerland.</p>
+            <div class="languages">
+                <h2>Language Skills</h2>
+                <div class="language-skills">
+                    <div class="language-details">
+                        <span>Tamil</span>
+                        <span>100%</span>
                     </div>
-                    <div class="languages">
-                        <h2>Language Skills</h2>
-                        <div class="language-skills">
-                            <div class="language-details">
-                                <span>Tamil</span>
-                                <span>100%</span>
-                            </div>
-                            <div class="language-bar">
-                                <div id="tamil-bar"></div>
-                            </div>
-                        </div>
-                        <div class="language-skills">
-                            <div class="language-details">
-                                <span>Deutsch</span>
-                                <span>100%</span>
-                            </div>
-                            <div class="language-bar">
-                                <div id="deu-bar"></div>
-                            </div>
-                        </div>
-                        <div class="language-skills">
-                            <div class="language-details">
-                                <span>English</span>
-                                <span>80%</span>
-                            </div>
-                            <div class="language-bar">
-                                <div id="eng-bar"></div>
-                            </div>
-                        </div>
-                        <div class="language-skills">
-                            <div class="language-details">
-                                <span>Français</span>
-                                <span>50%</span>
-                            </div>
-                            <div class="language-bar">
-                                <div id="fra-bar"></div>
-                            </div>
-                        </div>
-                        <div class="language-skills">
-                            <div class="language-details">
-                                <span>Italiano</span>
-                                <span>20%</span>
-                            </div>
-                            <div class="language-bar">
-                                <div id="ita-bar"></div>
-                            </div>
+                    <div class="language-bar">
+                        <div id="tamil-bar" style="width: 100%;">
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="colortest">
-                <div class="joke">
-                    <p>Dad Jokes.</p>
+                <div class="language-skills">
+                    <div class="language-details">
+                        <span>Deutsch</span>
+                        <span>100%</span>
+                    </div>
+                    <div class="language-bar">
+                        <div id="deu-bar" style="width: 100%;"></div>
+                    </div>
                 </div>
-                <button class="getJoke">Get Joke</button>
+                <div class="language-skills">
+                    <div class="language-details">
+                        <span>English</span>
+                        <span>80%</span>
+                    </div>
+                    <div class="language-bar">
+                        <div id="eng-bar" style="width: 80%;"></div>
+                    </div>
+                </div>
+                <div class="language-skills">
+                    <div class="language-details">
+                        <span>Français</span>
+                        <span>50%</span>
+                    </div>
+                    <div class="language-bar">
+                        <div id="fra-bar" style="width: 50%;"></div>
+                    </div>
+                </div>
+                <div class="language-skills">
+                    <div class="language-details">
+                        <span>Italiano</span>
+                        <span>20%</span>
+                    </div>
+                    <div class="language-bar">
+                        <div id="ita-bar" style="width: 20%;"></div>
+                    </div>
+                </div>
             </div>
-            <div class="middle-container" id="middle">
-                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
-                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
-            </div>
-        </main>
-        <footer>
-            <p>made by Ruthu V.</p>
-        </footer>
-    </body>
+        </div>
+    </div>
+    <div class="colortest">
+        <div class="joke">
+            <p>Dad Jokes.</p>
+        </div>
+        <button class="getJoke">Get Joke</button>
+    </div>
+    <div class="middle-container" id="middle">
+        <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
+            dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
+            clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet,
+            consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
+            sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no
+            sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing
+            elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At
+            vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est
+            Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
+            tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo
+            duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
+            dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
+            clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet,
+            consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
+            sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no
+            sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+        <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
+            dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
+            clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet,
+            consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
+            sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no
+            sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing
+            elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At
+            vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est
+            Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
+            tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo
+            duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
+            dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
+            clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet,
+            consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
+            sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no
+            sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+    </div>
+</main>
+<footer>
+    <p>made by Ruthu V.</p>
+</footer>
+</body>
 </html>
