minor changes + Twitter

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <!-- font package -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Paytone+One">
+    <!-- css text animations -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <!-- own stylesheet -->
     <link rel="stylesheet" href="styles.css">
     <!-- bootstrap -->
@@ -89,15 +91,15 @@
             </div>
         </div>
     </div>
-    <div class="colortest">
-        <div class="joke">
+    <div class="dadjoke-api">
+        <div class="joke animate__animated animate__fadeIn">
             <p>Dad Jokes.</p>
         </div>
         <button class="getJoke">Get Joke</button>
     </div>
     <div class="middle-container" id="middle">
-        <p>asdf</p>
-        <p>asdf</p>
+        <a class="twitter-timeline" href="https://twitter.com/djruthu07?ref_src=twsrc%5Etfw" data-tweet-limit="3">Tweets by djruthu07</a>
+        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     </div>
 </main>
 <footer>
