--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <nav class="navbar-sticky">
     <p><a href="#head">Home</a></p>
     <p><a href="#top">About me</a></p>
-    <p><a href="#middle">Contact</a></p>
+    <p><a href="#middle">My Twitter</a></p>
 </nav>
 
 <main>
@@ -92,14 +92,21 @@
         </div>
     </div>
     <div class="dadjoke-api">
-        <div class="joke animate__animated animate__fadeIn">
+        <div class="joke">
             <p>Dad Jokes.</p>
         </div>
         <button class="getJoke">Get Joke</button>
     </div>
     <div class="middle-container" id="middle">
-        <a class="twitter-timeline" href="https://twitter.com/djruthu07?ref_src=twsrc%5Etfw" data-tweet-limit="3">Tweets by djruthu07</a>
-        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        <div class="twt">
+            <a class="twitter-timeline"
+            href="https://twitter.com/djruthu07?ref_src=twsrc%5Etfw"
+            data-tweet-limit="3">Tweets by djruthu07</a>
+            <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        </div>
+        <div class="gith">
+            <a href="https://github.com/RuthuV96">GitHub</a>
+        </div>
     </div>
 </main>
 <footer>
