added social icons + minor changes

--- a/index.html
+++ b/index.html
@@ -98,15 +98,25 @@
         <button class="getJoke">Get Joke</button>
     </div>
     <div class="middle-container" id="middle">
+        <h2>Social Media Pages</h2>
+        <p>Feel free to visit my social media pages!</p>
+        <div class="social_links">
+            <img id="social" src="https://images.unsplash.com/photo-1611162617213-7d7a39e9b1d7?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1674&q=80" />
+            <p>laöskdfjölas</p>
+        </div>
+        <!-- <blockquote>
+            ferhbfbadgasdf
+        </blockquote>
         <div class="twt">
             <a class="twitter-timeline"
             href="https://twitter.com/djruthu07?ref_src=twsrc%5Etfw"
             data-tweet-limit="3">Tweets by djruthu07</a>
             <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-        </div>
-        <div class="gith">
+        </div> -->
+        <!-- <div class="gith">
             <a href="https://github.com/RuthuV96">GitHub</a>
-        </div>
+            <img src="https://ghchart.rshah.org/RuthuV96" alt="2016rshah's Github chart" />
+        </div> -->
     </div>
 </main>
 <footer>
