added social media links

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 <nav class="navbar-sticky">
     <p><a href="#head">Home</a></p>
     <p><a href="#top">About me</a></p>
-    <p><a href="#middle">My Twitter</a></p>
+    <p><a href="#dad">Want some Jokes?</a></p>
+    <p><a href="#middle">Social</a></p>
 </nav>
 
 <main>
@@ -91,7 +92,7 @@
             </div>
         </div>
     </div>
-    <div class="dadjoke-api">
+    <div class="dadjoke-api" id="dad">
         <div class="joke">
             <p>Dad Jokes.</p>
         </div>
@@ -99,10 +100,29 @@
     </div>
     <div class="middle-container" id="middle">
         <h2>Social Media Pages</h2>
+        <p>
+            Social Media is a place, where we can post, talk, search and connect with each other.
+            It is a place, where we can connect with likeminded people around the globe.
+            I want to share some of my thoughts on my open social media accounts.
+        </p>
+        <p>
+            My GitHub looks quite empty for now, because I've just started this account.
+            Maybe more repositories will come. Time will tell...
+        </p>
         <p>Feel free to visit my social media pages!</p>
         <div class="social_links">
             <img id="social" src="https://images.unsplash.com/photo-1611162617213-7d7a39e9b1d7?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1674&q=80" />
-            <p>laöskdfjölas</p>
+            <div class="social_icon_ordering">
+                <a href="https://github.com/RuthuV96" target="_blank">
+                    <img class="social-icons" src="github.png" />
+                </a>
+                <a href="https://twitter.com/djruthu07" target="_blank">
+                    <img class="social-icons" src="twitter.png" />
+                </a>
+                <a href="https://linkedin.com/in/ruthusanth-vijayakumar-19a7b5189" target="_blank">
+                    <img class="social-icons" src="linkedin.png" />
+                </a>
+            </div>
         </div>
         <!-- <blockquote>
             ferhbfbadgasdf
