color & text font change + some text

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <!-- font package -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Paytone+One">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu:medium">
     <!-- css text animations -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <!-- own stylesheet -->
@@ -39,7 +39,12 @@
                 <p>I was born in 1996, my parents are from Tamil origin, but on paper I'm Swiss. Right now, I'm studying
                     Business Information at the Bern University of applied science in Bern (obviously) and working part
                     time as Product Owner & Project Manager at SayNode Operations AG, a startup company based in
-                    Burgdorf, Switzerland.</p>
+                    Burgdorf, Switzerland.
+                </p>
+                <p>
+                    When I don't work or study, I play boccia tournaments, play video games, meet friends,
+                    hit the gym and do some random activities. Long story short: I just enjoy my life!
+                </p>
             </div>
             <div class="languages">
                 <h2>Language Skills</h2>
@@ -140,7 +145,10 @@
     </div>
 </main>
 <footer>
-    <p>made by Ruthu V.</p>
+    <div class="foot">
+        <p>made by myself :)</p>
+        <p>&copy; Ruthusanth Vijayakumar</p>
+    </div>
 </footer>
 </body>
 </html>
