--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
     <!-- own script -->
     <script src="script.js" defer></script>
-    <title>My Portfolio Page</title>
+    <title>Ruthu's Portfolio Page</title>
 </head>
 <body onload="typeWriterHeader()">
 <header class="header-container" id="head">
@@ -25,13 +25,13 @@
 
 <nav class="navbar-sticky">
     <p><a href="#head">Home</a></p>
-    <p><a href="#top">About me</a></p>
+    <p><a href="#about">About me</a></p>
     <p><a href="#dad">Want some Jokes?</a></p>
-    <p><a href="#middle">Social</a></p>
+    <p><a href="#social_network">Social</a></p>
 </nav>
 
 <main>
-    <div class="top-container" id="top">
+    <div class="top-container" id="about">
         <div class="about">
             <div class="about-me">
                 <h2>About me</h2>
@@ -103,7 +103,7 @@
         </div>
         <button class="getJoke">Get Joke</button>
     </div>
-    <div class="middle-container" id="middle">
+    <div class="middle-container" id="social_network">
         <h2>Social Media Pages</h2>
         <p>
             Social Media is a place, where we can post, talk, search and connect with each other.
